# flexfi

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: advanced_example.py  basic_example.py  genetic_example.py  groupwise_example.py  method_comparison_example.py
flexfi/: __init__.py
flexfi/core/: __init__.py  data.py  importance.py  importance_groupwise.py  models.py  utils.py
flexfi/visualization/: __init__.py  plots.py
tests/: __init__.py  test_data.py  test_importance.py  test_models.py  test_utils.py
